base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
spec:
  replicas: 10
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      volumes:
      - name: app-volume
        emptyDir: {}

      # Step 1: Clone the repo
      containers:
      - name: laravel
        image: laravelsail/php82-composer:latest
        workingDir: /app
        command: ["php", "artisan", "serve", "--host=0.0.0.0"]
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: app-volume
          mountPath: /app
