base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    name: laravel
spec:
  ingressClassName: nginx-fundaments
  rules:
  - host: laravel.clubplanner.fundaments.support
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: laravel
            port:
              number: 80
  tls:
    - hosts:
        - laravel.clubplanner.fundaments.support
      secretName: laravel-server-tls
